--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,6 +46,17 @@
 
             <section class="chat__messages"></section>
 
+            <section class="online__users">
+                <h3>Usuários Online</h3>
+                <ul class="online__users__list">
+                    <li class="online__users__item">Usuário 1</li>
+                    <li class="online__users__item">Usuário 2</li>
+                    <li class="online__users__item">Usuário 3</li>
+                    <li class="online__users__item">Usuário 4</li>
+                    <li class="online__users__item">Usuário 5</li>
+                </ul>
+            </section>
+
             <div class="logged__user"></div>
 
             <form class="chat__form">
